Fix species group tests to avoid cache problem in maven build Use shaded old library generated by new library